Renamed logo image file to logo.png and updated HTML reference

--- a/index.html.html
+++ b/index.html.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -81,7 +81,7 @@
 </head>
 <body>
   <header>
-    <img src="YOUR_LOGO_HERE.png" alt="Sehchri Creations Logo">
+    <img src="logo.png" alt="Sehchri Creations Logo">
   </header>
 
   <nav>
