--- a/index.html.html
+++ b/index.html.html
@@ -81,7 +81,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Sehchri Creations Logo">
+    <img src="images/logo.png" alt="Sehchri Creations Logo">
   </header>
 
   <nav>
