--- a/index.html.html
+++ b/index.html.html
@@ -7,90 +7,119 @@
   <meta name="description" content="Sehchri Creations offers handmade Radha-Krishna poshaks inspired by Vrindavan. All sizes available. Order now via WhatsApp – Fast shipping across India.">
   <meta name="keywords" content="Radha Krishna poshak, handmade poshak, Janmashtami dress, deity dress, vrindavan poshak">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Open Sans', sans-serif;
-      background: #fff7f8 url('https://images.unsplash.com/photo-1617957745224-19a68e5b3d3c?auto=format&fit=crop&w=1920&q=80') no-repeat center top;
-      background-size: cover;
-    }
-    header {
-      text-align: center;
-      padding: 20px;
-    }
-    header img {
-      max-width: 180px;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      background: rgba(255, 255, 255, 0.85);
-      padding: 10px;
-      font-weight: bold;
-    }
-    nav a {
-      text-decoration: none;
-      color: #2a4d8f;
-    }
-    .hero {
-      text-align: center;
-      padding: 60px 20px;
-      background: rgba(255,255,255,0.7);
-    }
-    .hero h1 {
-      font-size: 2rem;
-      color: #2a4d8f;
-    }
-    .cta-btn {
-      display: inline-block;
-      margin-top: 20px;
-      background: #25D366;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: 1.1rem;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      background: #fff;
-    }
-    .product {
-      background: #fefefe;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      overflow: hidden;
-      text-align: center;
-      padding: 10px;
-    }
-    .product img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-    }
-    footer {
-      text-align: center;
-      background: #f0f0f0;
-      padding: 20px;
-      font-size: 0.9rem;
-    }
-  </style>
+  body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    background: #fff7f8 url('https://images.unsplash.com/photo-1617957745224-19a68e5b3d3c?auto=format&fit=crop&w=1920&q=80') no-repeat center top;
+    background-size: cover;
+  }
+
+  /* ===== Navbar + Header updated ===== */
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.9);
+    padding: 12px 30px;
+    box-shadow: 0px 3px 8px rgba(0,0,0,0.15);
+    border-bottom: 2px solid #e6d5f5; /* soft spiritual border */
+  }
+
+  .logo img {
+    height: 65px;
+    width: auto;
+    border-radius: 50%;
+    border: 2px solid #d1b3ff; /* soft purple border for Vrindavan feel */
+  }
+
+  .nav-links a {
+    margin: 0 18px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #4b2c7a; /* Krishna blue-purple */
+    transition: all 0.3s ease;
+    font-size: 1rem;
+  }
+
+  .nav-links a:hover {
+    color: #e67e22; /* saffron hover (temple vibe) */
+    text-shadow: 0px 0px 6px rgba(230,126,34,0.5);
+  }
+
+  /* ===== Hero section ===== */
+  .hero {
+    text-align: center;
+    padding: 70px 20px;
+    background: rgba(255,255,255,0.7);
+    border-bottom: 2px dashed #d1b3ff;
+  }
+  .hero h1 {
+    font-size: 2.2rem;
+    color: #4b2c7a;
+    font-family: 'Georgia', serif;
+  }
+
+  .cta-btn {
+    display: inline-block;
+    margin-top: 25px;
+    background: #25D366;
+    color: white;
+    padding: 14px 28px;
+    border-radius: 30px;
+    text-decoration: none;
+    font-size: 1.1rem;
+    font-weight: bold;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
+  }
+
+  .products {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    background: #fff;
+  }
+  .product {
+    background: #fff9f5;
+    border-radius: 15px;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    overflow: hidden;
+    text-align: center;
+    padding: 12px;
+    border: 1px solid #f3d9fa; /* pastel border */
+  }
+  .product img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 12px;
+  }
+
+  footer {
+    text-align: center;
+    background: #fdf2ff;
+    padding: 20px;
+    font-size: 0.9rem;
+    border-top: 2px solid #e6d5f5;
+    color: #4b2c7a;
+  }
+</style>
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Sehchri Creations Logo">
-  </header>
-
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About Us</a>
-    <a href="#products">Products</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#contact">Contact</a>
+  <nav class="navbar">
+    <div class="logo">
+      <img src="images/logo.png" alt="Sehchri Creations Logo">
+    </div>
+    <div class="nav-links">
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#products">Products</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+    </div>
   </nav>
+</header>
 
   <section class="hero" id="home">
     <h1>Handmade Radha-Krishna Poshak – Vrindavan Inspired</h1>
