--- a/index.html
+++ b/index.html
@@ -6,70 +6,72 @@
   <title>Sehchri Creations – Handmade Radha Krishna Poshak</title>
   <meta name="description" content="Sehchri Creations offers handmade Radha-Krishna poshaks inspired by Vrindavan. All sizes available. Order now via WhatsApp – Fast shipping across India.">
   <meta name="keywords" content="Radha Krishna poshak, handmade poshak, Janmashtami dress, deity dress, vrindavan poshak">
-  <style>
+ <style>
   body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background: #fffafc url('https://www.transparenttextures.com/patterns/paper-fibers.png');
-    background-size: cover;
+    background: #fff7f8 url('https://www.transparenttextures.com/patterns/floral.png') repeat; 
+    /* Floral subtle pattern */
   }
 
   header {
     text-align: center;
-    padding: 15px;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.8);
+    border-bottom: 2px dashed #d6a2e8;
+    position: relative;
   }
+
   header img {
     max-width: 160px;
     border-radius: 50%;
-    border: 3px solid #e6d6f7;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    border: 3px solid #d6a2e8;
+  }
+
+  /* flute icon */
+  header::after {
+    content: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Bansuri_flute_icon.png/64px-Bansuri_flute_icon.png');
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    width: 50px;
+    height: auto;
   }
 
   nav {
     display: flex;
     justify-content: center;
-    gap: 25px;
-    background: rgba(255, 255, 255, 0.9);
-    padding: 12px;
+    gap: 20px;
+    background: rgba(255, 255, 255, 0.85);
+    padding: 10px;
     font-weight: bold;
-    border-top: 2px solid #d9c2f0;
-    border-bottom: 2px solid #d9c2f0;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   }
+
   nav a {
     text-decoration: none;
-    color: #4a148c;
-    position: relative;
+    color: #5a189a;
+    transition: color 0.3s;
   }
-  nav a::after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 2px;
-    left: 0;
-    bottom: -4px;
-    background: goldenrod;
-    transition: 0.3s;
-  }
-  nav a:hover::after {
-    width: 100%;
+
+  nav a:hover {
+    color: #d63384;
   }
 
   .hero {
     text-align: center;
     padding: 60px 20px;
-    background: rgba(255,255,255,0.8) url('https://cdn-icons-png.flaticon.com/512/616/616490.png') no-repeat right 20px bottom 20px;
-    background-size: 80px;
-    border-bottom: 3px dashed #d9c2f0;
+    background: rgba(255,255,255,0.7);
+    border-bottom: 2px dashed #e0b0ff;
   }
+
   .hero h1 {
-    font-size: 2.2rem;
-    color: #4a148c;
+    font-size: 2rem;
+    color: #5a189a;
     font-weight: bold;
   }
-  .hero p {
-    font-size: 1rem;
-    color: #333;
-  }
+
   .cta-btn {
     display: inline-block;
     margin-top: 20px;
@@ -79,12 +81,7 @@
     border-radius: 25px;
     text-decoration: none;
     font-size: 1.1rem;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  .cta-btn:hover {
-    background: #1ebe5d;
-    transform: scale(1.05);
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
   }
 
   .products {
@@ -92,17 +89,19 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-    background: #fffdfd;
+    background: #fff;
   }
+
   .product {
-    background: #fffafc;
+    background: #fff0f6;
     border-radius: 12px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     overflow: hidden;
     text-align: center;
     padding: 10px;
-    border: 2px solid #f1e3ff;
+    border: 2px solid #d6a2e8;
   }
+
   .product img {
     width: 100%;
     height: 250px;
@@ -111,18 +110,10 @@
 
   footer {
     text-align: center;
-    background: #f6edff;
+    background: #f8f0fc;
     padding: 20px;
-    font-size: 0.95rem;
-    color: #4a148c;
-    border-top: 2px solid #e2d0ff;
-  }
-  footer::after {
-    content: "✨ With Love from Vrindavan 🌸";
-    display: block;
-    margin-top: 8px;
-    font-style: italic;
-    color: #7b1fa2;
+    font-size: 0.9rem;
+    border-top: 2px dashed #d6a2e8;
   }
 </style>
 </head>
