--- a/index.html
+++ b/index.html
@@ -10,66 +10,54 @@
   body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background: #fff7f8 url('https://www.transparenttextures.com/patterns/floral.png') repeat; 
-    /* Floral subtle pattern */
+    background: url('https://i.ibb.co/Y3nJp2p/krishna-floral-bg.jpg') no-repeat center center fixed;
+    background-size: cover;
   }
 
   header {
     text-align: center;
     padding: 20px;
-    background: rgba(255, 255, 255, 0.8);
-    border-bottom: 2px dashed #d6a2e8;
-    position: relative;
+    background: rgba(255, 255, 255, 0.85);
+    border-bottom: 2px solid #e0c3fc;
   }
 
   header img {
-    max-width: 160px;
+    max-width: 150px;
     border-radius: 50%;
-    border: 3px solid #d6a2e8;
-  }
-
-  /* flute icon */
-  header::after {
-    content: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Bansuri_flute_icon.png/64px-Bansuri_flute_icon.png');
-    position: absolute;
-    right: 30px;
-    top: 20px;
-    width: 50px;
-    height: auto;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   }
 
   nav {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    background: rgba(255, 255, 255, 0.85);
-    padding: 10px;
-    font-weight: bold;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    margin-top: 10px;
   }
 
   nav a {
+    margin: 0 15px;
     text-decoration: none;
-    color: #5a189a;
+    font-weight: bold;
+    color: #5c2d91;
     transition: color 0.3s;
   }
 
   nav a:hover {
-    color: #d63384;
+    color: #ff4081;
   }
 
   .hero {
     text-align: center;
     padding: 60px 20px;
     background: rgba(255,255,255,0.7);
-    border-bottom: 2px dashed #e0b0ff;
+    border-bottom: 2px dashed #e0c3fc;
   }
 
   .hero h1 {
-    font-size: 2rem;
-    color: #5a189a;
-    font-weight: bold;
+    font-size: 2.2rem;
+    color: #5c2d91;
+  }
+
+  .hero p {
+    font-size: 1.1rem;
+    color: #333;
   }
 
   .cta-btn {
@@ -77,11 +65,22 @@
     margin-top: 20px;
     background: #25D366;
     color: white;
-    padding: 12px 28px;
+    padding: 12px 24px;
     border-radius: 25px;
     text-decoration: none;
     font-size: 1.1rem;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+    transition: background 0.3s;
+  }
+
+  .cta-btn:hover {
+    background: #1ebe5c;
+  }
+
+  h2 {
+    text-align: center;
+    margin: 30px 0;
+    color: #5c2d91;
   }
 
   .products {
@@ -89,31 +88,36 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-    background: #fff;
   }
 
   .product {
-    background: #fff0f6;
+    background: rgba(255,255,255,0.9);
     border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     text-align: center;
     padding: 10px;
-    border: 2px solid #d6a2e8;
   }
 
   .product img {
     width: 100%;
     height: 250px;
     object-fit: cover;
+    border-radius: 8px;
   }
 
   footer {
     text-align: center;
-    background: #f8f0fc;
+    background: rgba(255, 255, 255, 0.85);
     padding: 20px;
-    font-size: 0.9rem;
-    border-top: 2px dashed #d6a2e8;
+    font-size: 0.95rem;
+    margin-top: 20px;
+    border-top: 2px solid #e0c3fc;
+    color: #5c2d91;
+  }
+
+  footer p:first-child {
+    font-style: italic;
+    font-weight: bold;
   }
 </style>
 </head>
