--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
   <meta name="description" content="Sehchri Creations offers handmade Radha-Krishna poshaks inspired by Vrindavan. All sizes available. Order now via WhatsApp – Fast shipping across India.">
   <meta name="keywords" content="Radha Krishna poshak, handmade poshak, Janmashtami dress, deity dress, vrindavan poshak">
  <style>
-  body {
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
-    background: url('https://i.ibb.co/Y3nJp2p/krishna-floral-bg.jpg') no-repeat center center fixed;
-    background-size: cover;
-  }
+body {
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  background: url('images/krishna.jpg') no-repeat center center fixed;
+  background-size: cover;   /* pura screen cover karega */
+  background-attachment: fixed;  /* scroll karne par bhi background fixed rahega */
+}
+
+/* thoda overlay transparency taaki text clearly dikhe */
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.7); /* halka white transparent layer */
+  z-index: -1;
+}
 
   header {
     text-align: center;
