--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   background: url('images/krishna.jpg') no-repeat center center fixed;
-  background-size: cover;   /* pura screen cover karega */
-  background-attachment: fixed;  /* scroll karne par bhi background fixed rahega */
+  background-size: cover;  
+  background-attachment: fixed; 
 }
 
-/* thoda overlay transparency taaki text clearly dikhe */
 body::before {
   content: "";
   position: fixed;
@@ -23,7 +22,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.7); /* halka white transparent layer */
+  background: rgba(255, 255, 255, 0.7);
   z-index: -1;
 }
 
