--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
       position: relative;
     }
 
-    /* Overlay for readability */
     body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.95);
-      z-index: -1;
-    }
+    content: "";
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.85); /* pehle 0.7 tha, ab 0.85 kiya */
+    z-index: -1;
+}
 
     /* Header */
     header {
