--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     left: 0; 
     right: 0; 
     bottom: 0;
-    background: rgba(255, 255, 255, 0.85); /* pehle 0.7 tha, ab 0.85 kiya */
+   background: rgba(255, 255, 255, 0.3); /* 0.3 matlab zyada transparent */
     z-index: -1;
 }
 
