--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     left: 0; 
     right: 0; 
     bottom: 0;
-   background: rgba(255, 255, 255, 0.3); /* 0.3 matlab zyada transparent */
+   background: rgba(255, 255, 255, 0.85);
+      opacity: 0.85;
     z-index: -1;
 }
 
