--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       position: relative;
     }
 
-    body::before {
-    content: "";
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    right: 0; 
-    bottom: 0;
-   background: rgba(255, 255, 255, 0.85);
-      opacity: 0.85;
-    z-index: -1;
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("images/krishna.jpg") no-repeat center center/cover;
+  opacity: 0.70;  /* Bas 5% aur kam overlay, background zyada visible */
+  z-index: -1;
 }
 
     /* Header */
