--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sehchri Creations – Handmade Radha Krishna Poshak</title>
   <meta name="description" content="Sehchri Creations offers handmade Radha-Krishna poshaks inspired by Vrindavan. All sizes available. Order now via WhatsApp – Fast shipping across India.">
   <meta name="keywords" content="Radha Krishna poshak, handmade poshak, Janmashtami dress, deity dress, vrindavan poshak">
@@ -11,179 +11,244 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Merriweather:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
-    /* Body */
-    body {
-      margin: 0;
+    /* ---------- Base / Background ---------- */
+    :root{
+      --primary-purple: #4B0082;
+      --accent: #25D366;
+      --card-bg: rgba(255,255,255,0.92);
+    }
+
+    html,body{
+      height:100%;
+      margin:0;
+    }
+
+    body{
       font-family: 'Poppins', sans-serif;
       background: url('images/krishna.jpg') no-repeat center center fixed;
       background-size: cover;
       position: relative;
+      color: #222;
     }
 
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("images/krishna.jpg") no-repeat center center/cover;
-  opacity: 0.70;  /* Bas 5% aur kam overlay, background zyada visible */
-  z-index: -1;
-}
-
-    /* Header */
-    header {
-      text-align: center;
-      padding: 20px;
-      background: rgba(255, 255, 255, 0.9);
-      border-bottom: 2px solid #e0c3fc;
+    /* overlay layer to keep text readable but allow background to show */
+    body::before{
+      content:"";
+      position: fixed;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(255,255,255,0.70); /* overlay opacity — tweak if needed */
+      z-index: -2; /* behind content */
     }
 
-    header img {
-      max-width: 150px;
-      border-radius: 50%;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    nav {
-      margin-top: 10px;
-    }
-
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: 600;
-      font-family: 'Poppins', sans-serif;
-      color: #5c2d91;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #ff4081;
-    }
-
-    /* Hero Section */
-    .hero {
-      text-align: center;
-      padding: 60px 20px;
-      background: rgba(255,255,255,0.8);
-      border-bottom: 2px dashed #e0c3fc;
+    /* ---------- Header (transparent + blur) ---------- */
+    header{
       position: relative;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      padding: 18px 16px;
+      background: rgba(255,255,255,0.6); /* transparent */
+      backdrop-filter: blur(6px); /* frosted glass effect */
+      -webkit-backdrop-filter: blur(6px);
+      border-bottom: 1px solid rgba(160,120,220,0.25);
     }
 
-    .hero h1 {
+    .logo img{
+      width:120px;
+      height:auto;
+      border-radius:50%;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+      border: 3px solid rgba(215,185,255,0.7);
+      background: rgba(255,255,255,0.5);
+      padding:6px;
+    }
+
+    /* nav */
+    .nav-links{
+      display:flex;
+      gap:22px;
+      align-items:center;
+      justify-content:center;
+      flex-wrap:wrap;
+      margin-top:6px;
+    }
+    .nav-links a{
+      text-decoration:none;
+      color:var(--primary-purple);
+      font-weight:600;
+      font-family:'Poppins',sans-serif;
+      transition: color .25s ease, transform .15s ease;
+      letter-spacing: .2px;
+    }
+    .nav-links a:hover{
+      color:#d63384;
+      transform: translateY(-2px);
+    }
+
+    /* ---------- Hero ---------- */
+    .hero{
+      position: relative;
+      z-index: 1;
+      text-align:center;
+      padding:72px 20px;
+      background: linear-gradient(rgba(255,255,255,0.86), rgba(255,255,255,0.86));
+      border-bottom: 2px dashed rgba(224,195,252,0.8);
+    }
+
+    .hero h1{
+      margin:0 0 12px 0;
       font-family: 'Great Vibes', cursive;
-      font-size: 3rem;
-      font-weight: bold;
-      color: #4B0082;
-      margin-bottom: 10px;
+      color: var(--primary-purple);
+      font-size: 3.2rem;
+      line-height:1.05;
     }
 
-    .hero p {
+    .hero p{
+      margin:0 auto;
+      max-width:960px;
       font-family: 'Merriweather', serif;
-      font-size: 1.2rem;
-      color: #333;
+      color:#333;
+      font-size:1.05rem;
     }
 
-    .cta-btn {
-      display: inline-block;
-      margin-top: 20px;
-      background: #25D366;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 25px;
-      text-decoration: none;
-      font-size: 1rem;
-      font-weight: 600;
-      font-family: 'Poppins', sans-serif;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-      transition: background 0.3s;
+    .cta-btn{
+      display:inline-block;
+      margin-top:22px;
+      background: var(--accent);
+      color:#fff;
+      padding:12px 28px;
+      border-radius:28px;
+      text-decoration:none;
+      font-weight:600;
+      box-shadow: 0 6px 14px rgba(0,0,0,0.12);
+      transition: transform .18s ease, box-shadow .18s ease;
+      font-family:'Poppins',sans-serif;
     }
+    .cta-btn:hover{ transform: translateY(-3px); box-shadow: 0 10px 20px rgba(0,0,0,0.14); }
 
-    .cta-btn:hover {
-      background: #128C7E;
-    }
-
-    /* Flute PNG */
-    .hero::after {
-      content: "";
-      position: absolute;
-      bottom: -30px;
-      right: 30px;
-      width: 120px;
-      height: 40px;
-      background: url('images/flute.png') no-repeat center;
-      background-size: contain;
+    /* Decorative flute PNG placed inside hero (use images/flute.png) */
+    .hero::after{
+      content:"";
+      position:absolute;
+      bottom:-30px;
+      right:28px;
+      width:120px;
+      height:40px;
+      background: url('images/flute.png') no-repeat center/contain;
       transform: rotate(-15deg);
+      opacity:0.98;
+      pointer-events:none;
     }
 
-    /* Section Titles */
-    h2 {
+    /* ---------- Section Titles ---------- */
+    h2{
       font-family: 'Merriweather', serif;
-      font-size: 2rem;
-      font-weight: 700;
-      text-align: center;
-      color: #4B0082;
+      font-size:2rem;
+      color: var(--primary-purple);
+      text-align:center;
+      margin:36px 0 6px 0;
     }
 
-    /* Products */
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
+    /* ---------- Products grid ---------- */
+    .products{
+      padding:20px;
+      display:grid;
+      grid-template-columns: repeat(auto-fit,minmax(260px,1fr));
+      gap:20px;
+      max-width:1200px;
+      margin: 0 auto 30px auto;
     }
 
-    .product {
+    .product{
+      background: var(--card-bg);
+      border-radius:12px;
+      padding:14px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+      text-align:center;
+      border:1px solid rgba(220,200,255,0.5);
+      display:flex;
+      flex-direction:column;
+      gap:12px;
+      justify-content:space-between;
+    }
+
+    .product img{
+      width:100%;
+      height:230px;
+      object-fit:cover;
+      border-radius:8px;
+    }
+    .product h3{
+      margin:0;
+      color: #5c2d91;
+      font-family:'Poppins',sans-serif;
+      font-size:1.05rem;
+    }
+
+    /* ---------- About / Contact / Gallery ---------- */
+    .section-block{
+      padding:40px 20px;
+      max-width:900px;
+      margin:0 auto;
+      background: none;
+    }
+
+    .section-block.bg-soft{
+      background: rgba(255,247,248,0.85);
+    }
+
+    .section-block p{
+      font-family: 'Merriweather', serif;
+      color:#222;
+      line-height:1.6;
+    }
+
+    /* ---------- Footer ---------- */
+    footer{
+      text-align:center;
+      padding:22px 16px;
       background: rgba(255,255,255,0.9);
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 10px;
-    }
-
-    .product img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-
-    .product h3 {
-      font-family: 'Poppins', sans-serif;
-      font-size: 1.2rem;
-      margin: 10px 0;
+      border-top:1px solid rgba(224,195,252,0.6);
       color: #5c2d91;
     }
 
-    /* Footer */
-    footer {
-      text-align: center;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 20px;
-      font-size: 1rem;
-      margin-top: 20px;
-      border-top: 2px solid #e0c3fc;
-      color: #5c2d91;
-    }
-
-    footer p:first-child {
+    footer .love{
       font-family: 'Great Vibes', cursive;
-      font-size: 1.5rem;
-      color: #6a0dad;
-      margin-bottom: 5px;
+      font-size:1.4rem;
+      color:#6a0dad;
+      margin:0 0 6px 0;
+    }
+    footer small{
+      display:block;
+      color:#5c2d91;
+      margin-top:6px;
+      font-family:'Poppins',sans-serif;
+      font-size:.95rem;
+    }
+
+    /* ---------- Responsive tweaks ---------- */
+    @media (max-width:900px){
+      .hero h1{ font-size:2.4rem; }
+      .hero::after{ width:100px; height:34px; right:18px; bottom:-24px; }
+      .logo img{ width:110px; }
+    }
+    @media (max-width:560px){
+      .hero h1{ font-size:1.9rem; }
+      .nav-links{ gap:12px; font-size:.95rem; }
+      .products{ padding:12px; gap:12px; }
+      .product img{ height:180px; }
     }
   </style>
 </head>
-<body>
 
-  <!-- Header -->
+<body>
+  <!-- HEADER -->
   <header>
-    <div class="logo">
-      <img src="images/logo.png" alt="Sehchri Creations Logo">
-    </div>
-    <nav class="nav-links">
+    <div class="logo"><img src="images/logo.png" alt="Sehchri Creations Logo"></div>
+    <nav class="nav-links" aria-label="Main navigation">
       <a href="#home">Home</a>
       <a href="#about">About Us</a>
       <a href="#products">Products</a>
@@ -192,61 +257,63 @@ body::before {
     </nav>
   </header>
 
-  <!-- Hero -->
-  <section class="hero" id="home">
-    <h1>Handmade Radha-Krishna Poshak – Vrindavan Inspired</h1>
-    <p>Beautiful, handmade dresses for your Deities. All sizes available. Perfect for Janmashtami, Radha Ashtami & daily worship.</p>
-    <a href="https://wa.me/919058690076?text=Hi%20Sehchri%20Creation!%20I%20want%20to%20order%20a%20poshak" class="cta-btn">Order on WhatsApp</a>
-  </section>
+  <!-- HERO -->
+  <main>
+    <section class="hero" id="home" aria-labelledby="hero-heading">
+      <h1 id="hero-heading">Handmade Radha-Krishna Poshak – Vrindavan Inspired</h1>
+      <p>Beautiful, handmade dresses for your Deities. All sizes available. Perfect for Janmashtami, Radha Ashtami & daily worship.</p>
+      <a class="cta-btn" href="https://wa.me/919058690076?text=Hi%20Sehchri%20Creation!%20I%20want%20to%20order%20a%20poshak" aria-label="Order on WhatsApp">Order on WhatsApp</a>
+    </section>
 
-  <!-- Products -->
-  <section id="products">
-    <h2>Our Products</h2>
-    <div class="products">
-      <div class="product">
-        <img src="https://images.unsplash.com/photo-1620841743451-0e7a79f68de2?auto=format&fit=crop&w=600&q=80" alt="Krishna Poshak 1">
-        <h3>Krishna Poshak – Blue Royal</h3>
-        <a class="cta-btn" href="https://wa.me/919058690076?text=I%20want%20Krishna%20Poshak%20Blue%20Royal">Order Now</a>
+    <!-- PRODUCTS -->
+    <section id="products">
+      <h2>Our Products</h2>
+      <div class="products" role="list">
+        <div class="product" role="listitem">
+          <img src="https://images.unsplash.com/photo-1620841743451-0e7a79f68de2?auto=format&fit=crop&w=600&q=80" alt="Krishna Poshak Blue Royal">
+          <h3>Krishna Poshak – Blue Royal</h3>
+          <a class="cta-btn" href="https://wa.me/919058690076?text=I%20want%20Krishna%20Poshak%20Blue%20Royal">Order Now</a>
+        </div>
+
+        <div class="product" role="listitem">
+          <img src="https://images.unsplash.com/photo-1620841662961-42b21b5a2dd5?auto=format&fit=crop&w=600&q=80" alt="Krishna Poshak Pink Blossom">
+          <h3>Krishna Poshak – Pink Blossom</h3>
+          <a class="cta-btn" href="https://wa.me/919058690076?text=I%20want%20Krishna%20Poshak%20Pink%20Blossom">Order Now</a>
+        </div>
+
+        <!-- Add more product cards below (duplicate the .product blocks) -->
       </div>
-      <div class="product">
-        <img src="https://images.unsplash.com/photo-1620841662961-42b21b5a2dd5?auto=format&fit=crop&w=600&q=80" alt="Krishna Poshak 2">
-        <h3>Krishna Poshak – Pink Blossom</h3>
-        <a class="cta-btn" href="https://wa.me/919058690076?text=I%20want%20Krishna%20Poshak%20Pink%20Blossom">Order Now</a>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about" class="section-block bg-soft">
+      <h2>Our Story</h2>
+      <p>
+        Sehchri Creation was born out of devotion and love for Shri Radha-Krishna. Each dress is designed keeping Vrindavan’s traditional charm alive, while using high-quality fabric, pearls, stones & embroidery. Our goal is to deliver beautiful, affordable, handmade poshaks that enhance your deity’s beauty and bring divinity to your home temple.
+      </p>
+    </section>
+
+    <!-- GALLERY -->
+    <section id="gallery" class="section-block">
+      <h2>Gallery</h2>
+      <p style="text-align:center;">(Add process / behind-the-scenes images here later)</p>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact" class="section-block bg-soft">
+      <h2>Contact Us</h2>
+      <p style="text-align:center;">📞 Phone: 9058690076</p>
+      <p style="text-align:center;">📧 Email: sehchricreation@gmail.com</p>
+      <div style="text-align:center; margin-top:8px;">
+        <a class="cta-btn" href="https://wa.me/919058690076" aria-label="Chat on WhatsApp">Chat on WhatsApp</a>
       </div>
-      <!-- More products add kar sakte ho -->
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <!-- About -->
-  <section id="about" style="padding:40px; background:#fff7f8;">
-    <h2>Our Story</h2>
-    <p style="max-width:700px; margin:auto; text-align:center; font-family:'Merriweather', serif;">
-      Sehchri Creation was born out of devotion and love for Shri Radha-Krishna. Each dress is designed keeping Vrindavan’s traditional charm alive, while using high-quality fabric, pearls, stones & embroidery. Our goal is to deliver beautiful, affordable, handmade poshaks that enhance your deity’s beauty and bring divinity to your home temple.
-    </p>
-  </section>
-
-  <!-- Gallery -->
-  <section id="gallery" style="padding:40px;">
-    <h2>Gallery</h2>
-    <p style="text-align:center;">(Add process / behind-the-scenes images here later)</p>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" style="padding:40px; background:#fff7f8;">
-    <h2>Contact Us</h2>
-    <p style="text-align:center;">📞 Phone: 9058690076</p>
-    <p style="text-align:center;">📧 Email: sehchricreation@gmail.com</p>
-    <div style="text-align:center;">
-      <a href="https://wa.me/919058690076" class="cta-btn">Chat on WhatsApp</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
+  <!-- FOOTER -->
   <footer>
-    <p>With Love from Vrindavan 🌸✨</p>
-    <p>© 2025 Sehchri Creations. All rights reserved.</p>
+    <div class="love">With Love from Vrindavan 🌸✨</div>
+    <small>© 2025 Sehchri Creations. All rights reserved.</small>
   </footer>
-
 </body>
 </html>
-
