--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       content:"";
       position: fixed;
       top:0; left:0; right:0; bottom:0;
-      background: rgba(255,255,255,0.70); /* overlay opacity — tweak if needed */
+      background: rgba(255,255,255,0.65); /* overlay opacity — tweak if needed */
       z-index: -2; /* behind content */
     }
 
@@ -137,7 +137,7 @@
       right:28px;
       width:120px;
       height:40px;
-      background: url('images/flute.png') no-repeat center/contain;
+      background: url('images/flute.jpg') no-repeat center/contain;
       transform: rotate(-15deg);
       opacity:0.98;
       pointer-events:none;
